increase height to avoid cutoff of text

--- a/src/components/job-card/jobCard.css
+++ b/src/components/job-card/jobCard.css
@@ -43,7 +43,7 @@
   font-weight: 700;
   font-size: 1.25em;
   width: 320px;
-  max-height: 2.5em;
+  max-height: 2.75em;
   text-overflow: ellipsis;
   overflow: hidden;
 }
